src/styles/NewTab.css
body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  color: #484848;
  background-color: #f5f5f5;
}

.bookmark-groups-container {
  display: grid;
  flex-wrap: wrap;
  gap: 10px; 
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.bookmark-group-box {
  position: relative;
  background-color: #fff;
  border-radius: 10px;
  
  border: 1px solid #ddd; 
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);

  padding: 20px 20px;  /* top/bottom, left/right */
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: auto;

  /* Smooth outline and shadow transitions */
  transition: outline 0.2s ease, box-shadow 0.2s ease;
}

.bookmark-group-box:hover,
.bookmark-group-box:focus {
  /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
  outline: 2px solid #4897cf; 
  outline-offset: 0px;
  box-shadow: 0 0 20px rgba(72, 151, 207, 0.7); /* subtle glow */
}

.bookmark-group-box a {
  display: flex;
  color: #4897cf;
  text-decoration: none;
}

.bookmark-group-box a:hover,
.bookmark-group-box a:focus {
  text-decoration: underline;
}

.bookmark-group-box .edit-link-button,
.bookmark-group-box .delete-link-button {
  position: absolute;
  bottom: 10px;
  font-size: 14px;
  padding: 10px;
  background-color: transparent;
  color: #007aff;
  border: none;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.bookmark-group-box .edit-link-button {
  right: 70px;
}

.bookmark-group-box .delete-link-button {
  right: 10px;
}

.bookmark-container {
  display: flex;
  align-items: center;
  vertical-align: center;
  margin-bottom: 5px; 
}

.favicon {
  margin-right: 5px;
  vertical-align: middle;
}

a {
  margin-right: 5px;
}

.modify-link-button {
  border: none;
  background-color: transparent;
  color: grey;
  margin-left: 5px;
  padding: 0px;
}

.modify-link-button:hover {
  cursor: pointer;
}

.modify-link-button-img {
  width: 16px;
  height: 16px;
}

/* Modify link buttons should only appear when their parent single bookmarkContainer is being hovered over*/
.bookmark-group-box .bookmark-container:hover + .modify-link-button {
  display: block;
}
.bookmark-group-box .bookmark-container:not(:hover) .modify-link-button {
  display: none;
}

/* Form styles for popup */
form {
  display: flex;
  flex-direction: column;
  gap: 5px;
  max-width: 100%;
  min-width: 200px;
  padding: 0px;  
  box-sizing: border-box;
}

label {
  display: block;
  font-size: 18px;
}

input[type="text"] {
  font-size: 16px;
  padding: 10px; 
  max-width: 100%;
  margin-bottom: 15px;
  border: none;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}

form .add-bookmark-button {
  font-size: 18px;
  width: 100%;
  padding: 10px 15px;
  background-color: #4897cf;
  color: white;
  border: none;
  border-radius: 5px;
}

.delete-bookmark-group-button {
  border: none;
  background-color: #fff;
  width: 16px;
  height: 16px;
  margin-left: auto;
  padding: 0px;
}

.delete-bookmark-group-button img {
  width: 16px;
  height: 16px;
  color: #cccccc;
}

.delete-bookmark-group-button:hover {
  cursor: pointer;
}

.add-group-button {
  position: fixed;
  bottom: 20px;
  right: 20px;
  font-size: 14px;
  padding: 10px;
  background-color: #cccccc;
  border: none;
  border-radius: 5px;
  text-align: left;
}

.add-group-button:hover {
  cursor: pointer;
  background-color: #9d9d9d;
  color: white;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.export-bookmarks-button-container {
  position: fixed;
  bottom: 20px;
  left: 20px;
  display: flex;
  justify-content: flex-start;
}

/* TODO: Use SASS to avoid having to duplicate styles */
.export-or-load-bookmarks-button {
  margin-right: 5px;
  font-size: 14px;
  padding: 10px;
  background-color: #cccccc;
  border: none;
  border-radius: 5px;
  text-align: left;
}

.export-or-load-bookmarks-button:hover {
  cursor: pointer;
  background-color: #9d9d9d;
  color: white;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

